--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 random_forest.pkl filter=lfs diff=lfs merge=lfs -text
+final_model_random_forest.pkl filter=lfs diff=lfs merge=lfs -text
