--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
-random_forest.pkl filter=lfs diff=lfs merge=lfs -text
+decision_tree.pkl filter=lfs diff=lfs merge=lfs -text
 final_model_random_forest.pkl filter=lfs diff=lfs merge=lfs -text
+linear_regression.pkl filter=lfs diff=lfs merge=lfs -text
