--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 decision_tree.pkl filter=lfs diff=lfs merge=lfs -text
 final_model_random_forest.pkl filter=lfs diff=lfs merge=lfs -text
 linear_regression.pkl filter=lfs diff=lfs merge=lfs -text
+* text=auto eol=lf
